Fix display issue on firefox

--- a/src/assets/qq/_auth.scss
+++ b/src/assets/qq/_auth.scss
@@ -22,5 +22,5 @@
 .auth-container {
   margin-top: 60px;
   width: 500px;
-  height: 100%;
+  height: 267px;
 }
